# weapon_ball_simulation

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md
include/: ball.hpp  constants.hpp  line.hpp  object.hpp
include/weapon_ball/: ball.hpp  line.hpp  weapon.hpp
include/weapon_ball/object/: ball.hpp  line.hpp  weapon.hpp
include/weapon_ball/objects/: attachable_object.hpp  ball.hpp  line.hpp  object.hpp  weapon.hpp
include/weapon_ball/utils/: constants.hpp  partition.hpp
scripts/: check-compilation.sh
src/: ball.cpp  line.cpp  main.cpp  object.cpp
src/weapon_ball/: ball.cpp  line.cpp  object.cpp  weapon.cpp
src/weapon_ball/object/: ball.cpp  line.cpp  object.cpp  weapon.cpp
src/weapon_ball/objects/: attachable_object.cpp  ball.cpp  line.cpp  object.cpp  weapon.cpp
